--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  background-color: darkblue;
+  color: white;
+  font-size: 30px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin-top: 30px;
+}
+.active-class {
+  color: orange;
+  text-decoration: none;
+}
+.notactive-class {
+  color: white;
+  text-decoration: none;
+}
+#heading{
+  margin-left: 50px;
+  font-size:35px;
+  font-weight: bold;
+}
+#ansbtn {
+  margin-left: 55%;
+  border: none;
+  height: 31px;
+  width: 130px;
+  font-family: cursive;
+  background-image: linear-gradient(360deg, grey, white);
+  border-radius: 5px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table{
+  border:1px solid grey;
+  text-align: center;
+  margin-top: 100px;
+  
 }
